--- a/dungeon/dungeon.csproj
+++ b/dungeon/dungeon.csproj
@@ -38,6 +38,7 @@
     <Compile Include="Camera.cs" />
     <Compile Include="CollisionHandler.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="PathFinder.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
